Fix link. Fix links on mobile. Add chrome extension link.

--- a/resources/assets/sass/custom.sass
+++ b/resources/assets/sass/custom.sass
@@ -16,6 +16,6 @@ label
     margin-top: 42px
 
 @media only screen and (max-width: 600px)
-    a
+    a + a
       display: block
       margin: 7px 0
